--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <script src="lib/babylon.max.js"></script>
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.js"></script>
+    <script src="https://preview.babylonjs.com/gui/babylon.gui.js"></script>
     <script src="lib/recast.js"></script>
     <script src="lib/babylonjs.materials.js"></script>
     <script src="lib/cannon.js"></script>
